--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -13,7 +13,7 @@ jobs:
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
           INPUT_SCHEMA: addressbook.schema.json
-          INPUT_JSONS: mainnet/addressbook.json,testnet/addressbook.json,devnet/addressbook.json
+          INPUT_JSONS: coreum-mainnet-1/addressbook.json,coreum-testnet-1/addressbook.json,coreum-devnet-1/addressbook.json
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
